# rust-basic-http-server

./: CONTRIBUTING.md  Cargo.toml  LICENCE.md  README.md
src/: main.rs
src/http_server/: helper.rs  http_error.rs  http_path.rs  http_request.rs  http_response.rs  http_version.rs  lib.rs  mod.rs
