[package]
name = "rust-basic-http-server"
version = "0.1.0"
authors = ["GyroZepelix"]
edition = "2021"

[lints.rust]
unused = "allow"

[dependencies]
anyhow = "1.0.59"                                   # error handling
itertools = "0.11.0"            # General iterator helpers
env_logger = "0.11.0"
log = "0.4.20"
